# pine-engine

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: tv_export_20250313_20260313.csv  tv_nq_20250313_20260313.csv  tv_nq_new.csv
output/: sweep_test.csv
pine_engine/: __init__.py  ast_nodes.py  codegen.py  engine.py  lexer.py  main.py  parser.py
pine_engine/batch/: param_grid.py  runner.py
pine_engine/data/: loader.py
pine_engine/reporting/: stats.py  trade_log.py
pine_engine/runtime/: broker.py  builtins.py  na.py  series.py  strategy.py
pine_engine/tests/: test_codegen.py  test_foundation.py  test_lexer.py  test_parser.py
scripts/: example_sweep.py
