[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pine-engine"
version = "0.1.0"
description = "Pine Script v5 transpiler + backtesting runtime in pure Python"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "pouyA-png" }]
keywords = ["pine-script", "tradingview", "backtesting", "trading", "quant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/pouyA-png/pine-engine"
Repository = "https://github.com/pouyA-png/pine-engine"
Issues = "https://github.com/pouyA-png/pine-engine/issues"

[project.scripts]
pine-engine = "pine_engine.main:main"

[tool.setuptools.packages.find]
include = ["pine_engine*"]
exclude = ["data*", "output*", "scripts*"]
